@@ -36,12 +36,11 @@ delay_dependon_agi: no
 // Note: Setting this to anything above 0 can stop speedhacks.
 min_skill_delay_limit: 100
 
-// Default skill delay for non-weapon based skills which have no delay specified.
-// This delay is also the min can't walk delay of all skills.
+// This delay is the min 'can't walk delay' of all skills.
 // NOTE: Do not set this too low, if a character starts moving too soon after 
 // doing a skill, the client will not update this, and the player/mob will 
 // appear to "teleport" afterwards.
-default_skill_delay: 300
+default_walk_delay: 300
 
 //Completely disable skill delay of the following types (Note 3)
 //NOTE: By default mobs don't have the skill delay as specified in the skill
