@@ -354,7 +354,7 @@ extern struct Battle_Config
 	int exp_bonus_attacker;
 	int exp_bonus_max_attacker;
 	int min_skill_delay_limit;
-	int default_skill_delay;
+	int default_walk_delay;
 	int no_skill_delay;
 	int attack_walk_delay;
 	int require_glory_guild;
