@@ -1,5 +1,8 @@
 Date	Added
 
+2007/10/13
+	* Renamed the config default_skill_delay to default_walk_delay as that is
+	  the only thing it does now.
 2007/10/11
 	* Renamed import folder to import-tmpl [Playtester]
 	- new server owners please rename/copy it to import to use it
